--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -49,6 +49,7 @@ body {
   background: lightblue;
   overflow: auto;
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 textarea {
@@ -91,16 +92,17 @@ textarea {
   width: 100%;
   overflow:auto;
   overflow-x:hidden;
-  height: 225px;
+  height: 250px;
   position:relative;
   background: aliceblue;
 }
 
 .new-comment{
   width: 98%;
-  height: 42px;
-  position: absolute;
-  bottom: 2px;
+  box-sizing: border-box;
+  min-height: 21px;
+  max-height: 66px;
+  overflow-x: hidden;
 }
 
 .chat-title{
