--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -211,3 +211,11 @@ textarea {
 .numNotify{
   cursor: pointer;
 }
+
+.count{
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  color: blue;
+  background: darkseagreen;
+}
