--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -77,7 +77,7 @@ textarea {
   padding: 0;
   left: auto;
   line-height: 16px;
-  right: 190px;
+  right: 195px;
   text-align: left;
   bottom: 0;
 }
@@ -148,7 +148,7 @@ textarea {
   max-height: calc(100% - 47px);
   position: fixed;
   bottom: 0;
-  right: 0;
+  right: 5px;
   width: 190px;
 }
 
@@ -272,7 +272,7 @@ textarea {
   box-sizing: border-box;
   background: white;
   height: 24px;
-  
+
   padding: 3px;
   min-height: 30px;
 }
@@ -386,6 +386,8 @@ textarea {
 
 .postContainer{
   padding: 5px;
+  border-top: 1px solid #ddd;
+  margin-top: 15px;
 }
 
 .postDemo{
