--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -16,7 +16,7 @@
 		<div id="nav"> </div>
 	<div id="count"></div>
 	<div class="fixed body">
-		<div id="app"> </div>
+		<div id="app" class="sha2"> </div>
 	</div>
 
 	<div id="rightContainer"></div>
