--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -96,7 +96,6 @@ textarea {
 }
 
 .chatboxWr{
-  /*background: cadetblue;*/
   right: 0;
   width: 260px;
   height: 305px;
@@ -210,16 +209,16 @@ textarea {
 .inNotify {
   z-index: 10;
   position: absolute;
-  top: 9px;
-  right: -16px;
+  top: -12px;
+  right: -0px;
   width: 400px;
   max-height: 450px;
 }
 .inUser {
   z-index: 10;
   position: absolute;
-  top: 9px;
-  right: -16px;
+  top: -13px;
+  right: -0px;
 }
 
 .notifyMes{
@@ -332,16 +331,16 @@ textarea {
 .corner-right{
   width: 70px;
   position: absolute;
-  top: 1px;
+  top: 0px;
   right: -30px;
   z-index: 99;
 }
 .inUser .corner-right{
-  right: -20px;
+  right: -14px;
 }
 
 .inLogin .corner-right{
-  top: 1px;
+  right: -14px;
 }
 
 .pointingWr{
@@ -362,9 +361,9 @@ textarea {
   position:absolute;
   top:0; left:0;
   width:100%; height:100%;
-  background: #2185D0;
-  border-left: 1px solid #666;
-  border-top: 1px solid #666;
+  background: white;
+  border-left: 1px solid rgba(0,0,0, 0.2);
+  border-top: 1px solid rgba(0,0,0, 0.2);
   transform-origin:0 100%;
   transform: rotate(45deg);
 }
@@ -374,29 +373,41 @@ textarea {
   /*border-left: 1px solid #666;*/
   /*border-top: 1px solid #666;*/
 /*}*/
+.noSha{
+  box-shadow: none!important;
+}
 
-.notify-content{
-  box-shadow: 3px 5px 3px -3px #777 !important;
+.sha3{
+  -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2) !important;
+  box-shadow: 0 2px 10px rgba(0,0,0,.2) !important;
 }
 
 .sha{
-  box-shadow: 0px 5px 3px -3px #444 !important;
+  /*box-shadow: 0px 5px 3px -3px #444 !important;*/
+  border: 0!important;
+  border-bottom: 1px solid #135083!important;
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .52)!important;
+}
+.sha2{
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
+  transition: all 0.2s ease-in-out;
 }
 
 .inNotify .notify-content{
-  border-radius: 0 0 5px 5px!important;
+  border-radius: 0 0 3px 3px!important;
   border: 1px solid rgba(0,0,0, 0.2) !important;
+  border-top: none!important;
 }
 
 .inLogin .notify-content{
-  border-radius: 0 0 5px 5px!important;
+  border-radius: 0 0 3px 3px!important;
   width: 300px;
   min-height: 150px;
   border: 1px solid rgba(0,0,0, 0.2) !important;
 }
 
 .inUser .notify-content{
-  border-radius: 0 0 5px 5px!important;
+  border-radius: 0 0 3px 3px!important;
   width: 135px;
   min-height: 50px;
   border: 1px solid rgba(0,0,0, 0.2) !important;
@@ -408,11 +419,11 @@ textarea {
 }
 
 .border-right{
-  border-right: 1px solid #ccc;
+  border-right: 1px solid rgba(0,0,0, 0.1);
 }
 
 .border-left{
-  border-left: 1px solid #ccc;
+  border-left: 1px solid rgba(0,0,0, 0.1);
 }
 
 .main-content{
@@ -450,8 +461,6 @@ textarea {
 .inLogin{
   z-index: 10;
   position: absolute;
-  top: 9px;
-  right: -16px;
+  top: -13px;
+  right: -0px;
 }
-
-
