--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -6,7 +6,6 @@
 		<meta charset="UTF-8">
 		<title>Demo</title>
 		@cssTag("mainChat.css")
-		@views.html.index.other.spinner()
 	</head>
 
 	<body
@@ -14,20 +13,11 @@
 		name="@ctx.username.getOrElse("")"
 		mv = "@mVersion(ctx.userId)"
 	>
-	<div id="initLoad">
-		<div class="cssload-dots">
-			<div class="cssload-dot"></div>
-			<div class="cssload-dot"></div>
-			<div class="cssload-dot"></div>
-			<div class="cssload-dot"></div>
-			<div class="cssload-dot"></div>
-		</div>
-	</div>
 
 		<div id="nav"> </div>
 	<div id="count"></div>
 	<div class="fixed body">
-		<div id="app" class="sha2"> </div>
+		<div id="app"> </div>
 	</div>
 
 	<div id="rightContainer"></div>
@@ -54,7 +44,7 @@
 
 				initComponent();
 			}
-			else setTimeout(arguments.callee, 100);
+			else setTimeout(arguments.callee, 50);
 		})();
 	</script>
 	</body>
