--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -15,9 +15,11 @@ html,body {
 #app{
   min-height: 1000px;
   margin-top: 47px;
-  border-right: 1px solid #ccc;
-  border-left: 1px solid #ccc;
   padding-top: 10px;
+}
+
+.main-content{
+  padding: 0;
 }
 
 .config{
