--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -299,6 +299,10 @@ textarea {
   margin-right: 0!important;
 }
 
+.zero-margin-right{
+  margin-right: 0!important;
+}
+
 .num-label{
   top: 7px!important;
   left: 45px!important;
@@ -380,8 +384,8 @@ textarea {
 }
 
 .sha3{
-  -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2) !important;
-  box-shadow: 0 2px 10px rgba(0,0,0,.2) !important;
+  -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.3) !important;
+  box-shadow: 0 2px 10px rgba(0,0,0,.3) !important;
 }
 
 .sha{
@@ -391,7 +395,7 @@ textarea {
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .52)!important;
 }
 .sha2{
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.4) !important;
   transition: all 0.2s ease-in-out;
 }
 
@@ -421,11 +425,15 @@ textarea {
 }
 
 .border-right{
-  border-right: 1px solid rgba(0,0,0, 0.1);
+  border-right: 1px solid rgba(0,0,0, 0.3)!important;
 }
 
-.border-left{
-  border-left: 1px solid rgba(0,0,0, 0.1);
+.border-both{
+  border: 1px solid rgba(0,0,0, 0.3)!important;
+}
+
+.border-left-icon{
+  border-left: 1px solid rgba(0,0,0, 0.1)!important;
 }
 
 .main-content{
@@ -436,7 +444,7 @@ textarea {
 
 .postContainer{
   padding: 5px;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid rgba(0,0,0, 0.3);
   margin-top: 15px;
 }
 
