--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -436,6 +436,10 @@ textarea {
   border-left: 1px solid rgba(0,0,0, 0.1)!important;
 }
 
+.border-right-icon{
+  border-left: 1px solid rgba(0,0,0, 0.1)!important;
+}
+
 .main-content{
   min-height: 1000px;
   padding-left: 10px!important;
