--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -22,15 +22,18 @@
 
 	<div id="rightContainer"></div>
 
-	@cssAt("semantic/semantic.min.css")
+  @*cssAt("semantic/semantic.min.css")*@
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
+	<script type="text/javascript"></script>
 	@jsTag("mithril.js")
-	@jQueryTag
-	@jsAt("semantic/semantic.min.js")
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+	@*jQueryTag*@
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.js"></script>
+	@*jsAt("semantic/semantic.min.js")*@
 	@jsTag("jquery.textarea_autosize.js")
 	@jsTag("attrchange.js")
 	@jsTag("main.js")
 	@jsTag("app2.js")
-
 
 	<script >
 		m.route.mode = "pathname";
@@ -40,5 +43,17 @@
 		});
 		initComponent();
 	</script>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-69170503-1', 'auto');
+			ga('send', 'pageview');
+
+		</script>
+
 	</body>
 </html>
