--- a/app/views/auth/signup.scala.html
+++ b/app/views/auth/signup.scala.html
@@ -3,31 +3,27 @@
 	@auth.layout(
 		title = trans.signUp.str(),
 		zen = true) {
-		<div class="content_box small_box signup">
-			<div class="alternative">
-				@trans.haveAnAccount()
-				<a href="@routes.Auth.login()" class="button" data-icon="F"> @trans.signIn()</a>
-			</div>
-			<div class="signup_box">
-				<h1 class="lichess_title">@trans.signUp()</h1>
+		<div class="ui segment">
+			<div class="ui form">
+				<h1 class="lichess_title">Signup!</h1>
 				<form action="@routes.Auth.signupPost" method="POST">
-					<ul>
+					<div>
 						@auth.formFields(form("username"), form("password"), form("email").some)
-						<li>
+						<div class="field">
 							@captcha.question
 							<input type="hidden" name="qId" value="@captcha.qId">
 							<input type="text" name="solution" value>
-						</li>
+						</div>
 						@errMsg(form)
-						<li data-icon="!">&nbsp;
+						<div class="field" data-icon="!">&nbsp;
 							<small>
 								By registering, you agree to be bound by our
 							</small>
-						</li>
-						<li>
-							<button type="submit" class="submit button" data-icon="F"> @trans.signUp()</button>
-						</li>
-					</ul>
+						</div>
+						<div>
+							<button type="submit" class="ui teal button" data-icon="F"> @trans.signUp()</button>
+						</div>
+					</div>
 					<input type="hidden" class="referrer" name="_referrer" value="@currentUrl" />
 				</form>
 			</div>
