--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -18,8 +18,11 @@ body{
   max-width: 960px;
 }
 
+
+
 #app{
   min-height: 1000px;
+  width: 960px;
   padding: 0px;
   margin-top: 47px;
   padding-top: 10px;
