--- a/public/stylesheets/mainChat.css
+++ b/public/stylesheets/mainChat.css
@@ -44,11 +44,10 @@ textarea:focus:-ms-input-placeholder { color:transparent!important; } /* IE 10+ 
 }
 
 #app{
-  /*min-height: 1000px;*/
   z-index: 1;
   width: 960px;
+  margin: 47px auto 0 auto;
   padding: 10px 0 0 0;
-  margin-top: 47px;
 }
 
 .main-content{
