--- a/app/views/auth/login.scala.html
+++ b/app/views/auth/login.scala.html
@@ -1,29 +1,32 @@
 @(form: Form[_], referrer: Option[String])(implicit ctx: Context)
 
 @auth.layout(title = trans.signIn.str(), zen = true) {
-	<div class="content_box login">
-		<div class="signup_box">
-			<h1 class="lichess_title">@trans.signIn()</h1>
+
+	<div class="ui segment">
+		<div class="ui form">
+			<h1 class="lichess_title">Login !</h1>
 			<form action="@routes.Auth.authenticate?referrer=@referrer" method="POST">
-				@form.globalError.map { error =>
-					<p class="error">@error.message</p>
-				}
-				<ul>
-					@auth.formFields(form("username"), form("password"), none)
-					<li>
-						<button type="submit" class="submit button" data-icon="F"> @trans.signIn()</button>
-					</li>
-				</ul>
+				<div>
+					@form.globalError.map { error =>
+						<p class="error">@error.message</p>
+					}
+					@auth.formFields(form("username"), form("password"), None)
+					<div>
+						<button type="submit" class="ui teal button" data-icon="F"> @trans.signIn()</button>
+
+					</div>
+					<div>
+						<br>
+						@trans.forgotPassword()
+						<a href="javascript:void(0)"> @trans.passwordReset()</a>
+						<br>
+						Not have account?
+						<a href="javascript:void(0)" onclick="signup()"> @trans.signUp()</a>
+					</div>
+				</div>
 				<input type="hidden" class="referrer" name="_referrer" value="@referrer.getOrElse(currentUrl)" />
 			</form>
 		</div>
-		<div class="alternative">
-			@trans.newToLichess()
-			<a href="@routes.Auth.signup()" class="button" data-icon="F"> @trans.signUp()</a>
-			<br />
-			<br />
-			@trans.forgotPassword()
-			<a href="@routes.Auth.passwordReset()"> @trans.passwordReset()</a>
-		</div>
 	</div>
+
 }
