--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -44,6 +44,7 @@
 				.js("/assets/semantic/semantic.min.js?v=3")
 				.js("/assets/javascripts/jquery.textarea_autosize.js?v=3")
 				.js("/assets/javascripts/attrchange.js?v=3")
+				.js("/assets/javascripts/moment.min.js?v=3")
 				.js("/assets/javascripts/mithril.js?v=3")
 				.js("/assets/javascripts/main.js?v=3")
 				.js({app: "/assets/javascripts/app2.js?v=3"})
