--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -37,12 +37,15 @@
 	<script>
 		  head.load(
 			  "/assets/stylesheets/mainChat.css?v=3",
-			  "/assets/semantic/semantic.min.css?v=3");
+//			  "/assets/semantic/semantic.min.css?v=3");
+			  "http://cdn.luanlv.info/assets/semantic/semantic.min.css?v=3");
 
-			head.load("/assets/javascripts/vendor/jquery.min.js")
+//			head.load("/assets/javascripts/vendor/jquery.min.js")
+			head.load("http://cdn.luanlv.info/assets/javascripts/vendor/jquery.min.js")
 				.js("/assets/javascripts/jquery.cookie.min.js?v=3")
 				.js("/assets/javascripts/jquery.storageapi.min.js?v=3")
-				.js("/assets/semantic/semantic.min.js?v=3")
+//				.js("/assets/semantic/semantic.min.js?v=3")
+				.js("http://cdn.luanlv.info/assets/semantic/semantic.min.js?v=3")
 				.js("/assets/javascripts/jquery.textarea_autosize.js?v=3")
 				.js("/assets/javascripts/attrchange.js?v=3")
 				.js("/assets/javascripts/moment.min.js?v=3")
