--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -6,6 +6,7 @@
 		<meta name="fragment" content="!">
 		<meta charset="UTF-8">
 		<title>Demo</title>
+		@views.html.index.other.headjs()
 		@views.html.index.other.spinner()
 	</head>
 
@@ -33,7 +34,7 @@
 	<div id="rightContainer"></div>
 
 	<div class="red"></div>
-	@jsTag("head.load.min.js")
+
 	<script>
 		  head.load(
 			  "http://cdn.luanlv.info/assets/stylesheets/mainChat.css?v=3",
@@ -41,9 +42,9 @@
 			  "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css");
 
 //			head.load("/assets/javascripts/vendor/jquery.min.js")
-			head.load("http://cdn.luanlv.info/assets/javascripts/vendor/jquery.min.js")
+			head.load("https://cdn.jsdelivr.net/jquery/3.0.0-alpha1/jquery.min.js")
 				.js("http://cdn.luanlv.info/assets/javascripts/jquery.cookie.min.js?v=3")
-				.js("http://cdn.luanlv.info/assets/javascripts/jquery.storageapi.min.js?v=3")
+				.js("https://cdn.jsdelivr.net/jquery.storage-api/1.7.2/jquery.storageapi.min.js")
 //				.js("/assets/semantic/semantic.min.js?v=3")
 				.js("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js")
 				.js("http://cdn.luanlv.info/assets/javascripts/jquery.textarea_autosize.js?v=3")
