--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -5,6 +5,7 @@
 	<head>
 		<meta name="fragment" content="!">
 		<meta charset="UTF-8">
+		<link rel="dns-prefetch" href="//socket.luanlv.info">
 		<title>Demo</title>
 		@views.html.index.other.headjs()
 		@views.html.index.other.spinner()
@@ -37,8 +38,8 @@
 		<script>
 			head.load(
 				"/assets/stylesheets/mainChat.css?v=3",
-//			  "/assets/semantic/semantic.min.css?v=3");
-				"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css");
+			  "/assets/semantic/semantic.min.css?v=3");
+				//"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css");
 
 						head.load("/assets/javascripts/vendor/jquery.min.js")
 			//head.load("/assets/javascripts/vendor/jquery.min.js")
