--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -38,15 +38,17 @@
 		<script>
 			head.load(
 				"/assets/stylesheets/mainChat.css?v=3",
-			  "/assets/semantic/semantic.min.css?v=3");
+				"/assets/stylesheets/animate.min.css?v=3",
+//			  "/assets/semantic/semantic.min.css?v=3");
+			  "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css");
 				//"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css");
 
-						head.load("/assets/javascripts/vendor/jquery.min.js")
+				head.load("/assets/javascripts/vendor/jquery.min.js")
 			//head.load("/assets/javascripts/vendor/jquery.min.js")
 				.js("/assets/javascripts/jquery.cookie.min.js?v=3")
 				.js("/assets/javascripts/jquery.storageapi.min.js?v=3")
-				.js("/assets/semantic/semantic.min.js?v=3")
-				//.js("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js")
+				.js("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js")
+//				.js("/assets/semantic/semantic.min.js?v=3")
 				.js("/assets/javascripts/jquery.textarea_autosize.js?v=3")
 				.js("/assets/javascripts/attrchange.js?v=3")
 				.js("/assets/javascripts/moment.min.js?v=3")
