--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta name="fragment" content="!">
 		<meta charset="UTF-8">
-		<link rel="dns-prefetch" href="//socket.luanlv.info">
+		<link rel="dns-prefetch" href="static.luanlv.info">
 		<title>Demo</title>
 		@views.html.index.other.headjs()
 		@views.html.index.other.spinner()
@@ -36,44 +36,38 @@
 
 		<div class="red"></div>
 		<script>
-			head.load(
-				"/assets/stylesheets/mainChat.css?v=3",
-				"/assets/stylesheets/animate.min.css?v=3",
+				head.load(
+						'@cssTagName("mainChat.css")',
+						'@cssTagName("animate.min.css")',
 //			  "/assets/semantic/semantic.min.css?v=3");
-			  "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css");
+						"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css");
 				//"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css");
-
-				head.load("/assets/javascripts/vendor/jquery.min.js")
-			//head.load("/assets/javascripts/vendor/jquery.min.js")
-				.js("/assets/javascripts/jquery.cookie.min.js?v=3")
-				.js("/assets/javascripts/jquery.storageapi.min.js?v=3")
-				.js("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js")
-//				.js("/assets/semantic/semantic.min.js?v=3")
-				.js("/assets/javascripts/jquery.textarea_autosize.js?v=3")
-				.js("/assets/javascripts/attrchange.js?v=3")
-				.js("/assets/javascripts/moment.min.js?v=3")
-				.js("/assets/javascripts/mithril.js?v=3")
-				.js("/assets/javascripts/mithril-storage.js?v=3")
-				.js("/assets/javascripts/main.js?v=3")
-				.js({app: "/assets/javascripts/app2.js?v=3"})
-			head.ready('app', function() {
-				var f1 = function(){
-					if(typeof(initRoute) == "function" && typeof($) == "function" && $('.red').css('color') != 'rgb(0, 0, 0)'){
-						initRoute();
-						initComponent();
-					} else {
-						setTimeout(f1, 10)
-					}
-				};
-				f1()
-
-			});
+				head.load('@jsTagName("vendor/jquery.min.js")')
+						//head.load("/assets/javascripts/vendor/jquery.min.js")
+						.js('@jsTagName("jquery.cookie.min.js")')
+						.js('@jsTagName("jquery.storageapi.min.js")')
+						.js("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js")
+						.js('@jsTagName("jquery.textarea_autosize.js")')
+						.js('@jsTagName("attrchange.js")')
+						.js('@jsTagName("moment.min.js")')
+						.js('@jsTagName("mithril.js")')
+						.js('@jsTagName("mithril-storage.js")')
+						.js('@jsTagName("main.js")')
+						.js({app: '@jsTagName("app2.js")'})
+				head.ready('app', function() {
+					var f1 = function(){
+						if(typeof(initRoute) == "function" && typeof($) == "function" && $('.red').css('color') != 'rgb(0, 0, 0)'){
+							initRoute();
+							initComponent();
+						} else {
+							setTimeout(f1, 10)
+						}
+					};
+					f1()
+				});
 
 		</script>
 
-		@*<script >*@
-
-		@*</script>*@
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
