--- a/app/views/monitor/monitor.scala.html
+++ b/app/views/monitor/monitor.scala.html
@@ -8,7 +8,7 @@
     @cssTag("monitor.css")
   </head>
   <body>
-    <a class="back" href="#">&lt; back to lichess</a>
+    <a class="back" href="#">&lt; back to Website</a>
     <h1>Reactor <span class="down">DOWN</span><span class="up">OPERATIONAL</span></h1>
     <div id="monitors" class="clearfix">
     </div>
