--- a/front_end/scss/style.scss
+++ b/front_end/scss/style.scss
@@ -7,7 +7,7 @@ html,body {
   margin: 0;
   padding: 0;
   background: #fff !important;
-  font-family: Georgia,Times,"Times New Roman",serif !important;
+  font-family: 'Open Sans', sans-serif, Arial, Helvetica !important;
 }
 
 .mh500{
@@ -570,7 +570,7 @@ textarea {
 }
 .sha2{
   box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.4) !important;
-  transition: all 0.1s ease-in-out;
+  //transition: all 0.1s ease-in-out;
 }
 
 .inNotify .notify-content{
@@ -700,7 +700,7 @@ textarea {
     overflow: hidden;
   }
   .author{
-    color: #777 !important;
+    color: #666 !important;
   }
 }
 
